@@ -10,6 +10,7 @@ Change Log:
 - Fix a bug in Pro-Rating Add-on to correctly apply discount from now on
 - Fix wrong signup-logic to instantly disable the old subscription on membership upgrade/downgrade
 - Fix a PHP error that occured when paying the first invoice of a member via manual gateway
+- Small changes like new filters and code cleanup
 
 1.0.1.1
 ----------------------------------------------------------------------
